# Epsilon-RootFailureFinding-Assignment

./: CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
Codes/: CMakeLists.txt  CmakeLists.txt  FalsePosition.cpp  NewtonRaphson.cpp  RootFindingFailure.cpp
Reports/: Epsilon_Report.tex
